crates/uitest/fixtures/mir_check/immutable_nested_helper_read.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/immutable_nested_helper_read.fe
---
error[11-0002]: immutable field `b` may be read before it is assigned
   ┌─ immutable_nested_helper_read.fe:17:14
   │
17 │ pub contract Counter {
   │              ^^^^^^^ this read requires an initialized immutable field
   │
   = note: assign the field on all paths before reading it in `init`
